--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'World War, 1914-1918 -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Tin Soldier
 url: http://www.gutenberg.org/ebooks/18056
